Bug 90361 - crash when adding Spin Button from toolbar on dialog
Summary: crash when adding Spin Button from toolbar on dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.1.2 release
Hardware: Other All
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0
Keywords: haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2015-03-31 05:30 UTC by raal
Modified: 2016-10-25 19:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
printscreen of bug (48.72 KB, image/png)
2015-03-31 05:30 UTC, raal
Details
backtrace (1.16 KB, application/zip)
2015-04-03 19:33 UTC, raal
Details
backtrace (5.36 KB, text/plain)
2015-04-11 07:01 UTC, Matthew Francis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2015-03-31 05:30:38 UTC
Created attachment 114483 [details]
printscreen of bug

Steps:
- open attachment https://bugs.documentfoundation.org/attachment.cgi?id=114452 from bug 90340
- enable macros
- menu Tolls-Macro-Macro editor-Libreoffice Basic
- in Control.ods select Standard/Module1/Main, click Edit
- double click on Dialogue_1
- add Spin Button from toolbar on dialog

Crash
Comment 1 raal 2015-04-03 19:33:50 UTC
Created attachment 114593 [details]
backtrace

bt from
Version: 4.5.0.0.alpha0+
Build ID: 28c61871e876e6a2cac47439f768504b1a4c94a0
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-03-27_06:30:21
Comment 2 raal 2015-04-03 19:38:57 UTC
LibreOffice 3.5.0 
Build ID: d6cde02
Spin button doesn't exist in toolbar
Comment 3 Buovjaga 2015-04-10 15:00:09 UTC
Reproduced.

Win 7 Pro 64-bit, Version: 4.4.2.2
Build ID: c4c7d32d0d49397cad38d62472b0bc8acff48dd6
Locale: fi_FI

Version: 4.5.0.0.alpha0+ (x64)
Build ID: 53d7c88da82f6d16c0c9a45a86a3f9d505764605
TinderBox: Win-x86_64@42, Branch:master, Time: 2015-04-10_02:14:19
Locale: fi_FI
Comment 4 Matthew Francis 2015-04-11 06:58:58 UTC
Curiously hard to reproduce reliably - it does appear to be a regression, but I haven't been able to bisect this in a way that makes any sense
Comment 5 Matthew Francis 2015-04-11 07:01:23 UTC
Created attachment 114734 [details]
backtrace

The first attached backtrace doesn't actually contain a backtrace (I don't see it actually crash at present, only get stuck in a dialog) - the attached is from somewhere early in the 43all bibisect tree
Comment 6 Caolán McNamara 2015-06-05 13:51:47 UTC
AFAICS this seems to always been broken since

commit 9cff030fa15f89fa1009fbb3827ab11c43c20b04
Author: Noel Power <noel.power@novell.com>
Date:   Mon Dec 5 09:56:17 2011 +0000

    add some form control support for basic dialogs

which adds MakeDataAware calls which create instance on com.sun.star.table.CellValueBinding but the resulting sc/source/ui/unoobj/cellvaluebinding.cxx OCellValueBinding has m_bInitialized of false and nothing ever initializes it to an address so every use of it throws
Comment 7 Commit Notification 2015-06-05 13:54:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c0d6bc75b223e9e477ef3669f7dc4abec703ecf6

Resolves: tdf#90361 CellValueBinding/CellRangeListSource need WithArguments

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2015-06-05 13:56:13 UTC
Let try this as a tentative fix. It has the plus of not falling over and crashing immediately which seems an improvement. I wonder though if 9cff030fa15f89fa1009fbb3827ab11c43c20b04 is better seen as a work-in-progress which never got finished and we should just revert it.